<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MachineCommand" Id="{843eab55-1788-46ac-a0f6-2e98ef8f65e5}">
    <Declaration><![CDATA[TYPE ST_MachineCommand :
	STRUCT
		LightOn : BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>