<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MachineConfig" Id="{812b3908-0726-4f03-9519-e5c35ff43885}">
    <Declaration><![CDATA[TYPE ST_MachineConfig :
	STRUCT
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>