<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MachineRecipe" Id="{07d75730-416c-41da-92b5-fede231f0a1e}">
    <Declaration><![CDATA[TYPE ST_MachineRecipe :
	STRUCT
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>