<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MachineStatus" Id="{3afc61a5-fc03-416a-960d-ef1143b9a00c}">
    <Declaration><![CDATA[TYPE ST_MachineStatus :
	STRUCT
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>